# test_parser_for_def.team

./: .gitignore  Makefile  README.md  build.sh  database.sql  pyproject.toml
parser/: deep_search.py  get_categories.py  get_data_from_category.py  main.py  quick_search.py
parser/data/: all_categories_dict.json  all_products_data.html  categories.html  category_all_products.json
